facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__generic_bounds_k_v.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        struct Foo<K, V> where K: Eq + Hash {\n            inner: HashMap<K, V>,\n        }\n        \"#)"
---
#[automatically_derived]
unsafe impl<'__facet, K, V> ::facet::Facet<'__facet> for Foo<K, V>
where
    K: Eq + Hash,
    K: ::facet::Facet<'__facet>,
    V: ::facet::Facet<'__facet>,
{
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable = ::facet::value_vtable!(Self, |f, opts| {
            write!(f, "Foo")?;
            if let Some(opts) = opts.for_children() {
                write!(f, "<")?;
                (<K as ::facet::Facet>::SHAPE.vtable.type_name)(f, opts)?;
                write!(f, ", ")?;
                (<V as ::facet::Facet>::SHAPE.vtable.type_name)(f, opts)?;
                write!(f, ">")?;
            } else {
                write!(f, "<…>")?;
            }
            Ok(())
        });
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const {
            [{
                ::facet::Field::builder()
                    .name("inner")
                    .shape(::facet::shape_of(&|s: &Foo<K, V>| &s.inner))
                    .offset(:: core :: mem :: offset_of ! (Foo < K , V > , inner))
                    .build()
            }]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("Foo")
            .type_params(&[
                ::facet::TypeParam {
                    name: "K",
                    shape: || <K as ::facet::Facet>::SHAPE,
                },
                ::facet::TypeParam {
                    name: "V",
                    shape: || <V as ::facet::Facet>::SHAPE,
                },
            ])
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
