facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_snake_case.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"snake_case\")]\n        struct SnakeCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for SnakeCaseExample {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable = ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
            f,
            "SnakeCaseExample"
        ));
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("field_one")
                        .shape(::facet::shape_of(&|s: &SnakeCaseExample| &s.field_one))
                        .offset(::core::mem::offset_of!(SnakeCaseExample, field_one))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("field_two")
                        .shape(::facet::shape_of(&|s: &SnakeCaseExample| &s.field_two))
                        .offset(::core::mem::offset_of!(SnakeCaseExample, field_two))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("SnakeCaseExample")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::default())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
