facet-macros-emit/tests/codegen/snapshots/r#mod__codegen__rename_all_snakecase.snap
---
source: facet-macros-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"snake_case\")]\n        struct SnakeCaseExample {\n            fieldOne: String, // Note the camelCase input field name\n            fieldTwo: String,\n        }\n        \"#)"
---
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for SnakeCaseExample {
    const VTABLE: &'static ::facet::ValueVTable = &const {
        let mut vtable = ::facet::value_vtable!(Self, |f, _opts| ::core::fmt::Write::write_str(
            f,
            "SnakeCaseExample"
        ));
        vtable
    };
    const SHAPE: &'static ::facet::Shape<'static> = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                {
                    ::facet::Field::builder()
                        .name("field_one")
                        .shape(::facet::shape_of(&|s: &SnakeCaseExample| &s.fieldOne))
                        .offset(::core::mem::offset_of!(SnakeCaseExample, fieldOne))
                        .build()
                },
                {
                    ::facet::Field::builder()
                        .name("field_two")
                        .shape(::facet::shape_of(&|s: &SnakeCaseExample| &s.fieldTwo))
                        .offset(::core::mem::offset_of!(SnakeCaseExample, fieldTwo))
                        .build()
                },
            ]
        };
        ::facet::Shape::builder_for_sized::<Self>()
            .type_identifier("SnakeCaseExample")
            .ty(::facet::Type::User(::facet::UserType::Struct(
                ::facet::StructType::builder()
                    .repr(::facet::Repr::c())
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            )))
            .build()
    };
}
